# near-sdk

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  release-please-config.json
.docs/: README.template.md  clients.yaml  examples.yaml
.github/workflows/: near-js-test.yml  publish.yml  release-please.yml
client/: bundle.ts  create-account.ts  full-path.ts  package-lock.json  package.json
client/src/: index.ts
docs/: index.html  modules.html
docs/classes/: AggregatorAccount.html  CrankAccount.html  EscrowAccount.html  JobAccount.html  NearEvent.html  OracleAccount.html  PermissionAccount.html  QueueAccount.html  SwitchboardDecimal.html  SwitchboardProgram.html  SwitchboardProgramReadOnly.html  SwitchboardTransaction.html
docs/enums/: SwitchboardPermission.html
docs/functions/: batchActionsByTgas.html  estimateTgas.html  getProgramId.html  getWrappedMint.html  isBase58.html  isTxnSuccessful.html  loadNear.html  parseAddressString.html  roClient.html  toBase58.html
docs/interfaces/: AccountParams.html
docs/types/: NearEventCallback.html  NearNetwork.html
docs/variables/: DEFAULT_ESCROW_SEED.html  LOCALNET_PROGRAM_ID.html  MAINNET_PROGRAM_ID.html  PID.html  SWITCHBOARD_GAS_ESTIMATIONS.html  TESTNET_PROGRAM_ID.html
javascript/: README.md  full-path.ts  local-full-path.ts  package-lock.json  package.json
javascript/near.js/: .eslintignore  .eslintrc.json  .releaserc  CHANGELOG.md  README.md  add-history.ts  bundle.ts  escrow-deposit.ts  from-json.ts  full-path.ts  lease-testing.ts  listen.ts  local-full-path.ts  (+5 more)
programs/feed-parser/: Cargo.toml  README.md  build.sh
programs/feed-parser/src/: lib.rs
rust/: Cargo.toml  README.md
rust/sbv2-near/: Cargo.toml  README.md
rust/sbv2-near/src/: aggregator.rs  decimal.rs
(+34 files in other folders)
